Panel y nuevos idiomas

--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -1,5 +1,5 @@
 {
-    "welcome-back": "Welcome back",
-    "Project": "Project",
-    "Analytics": "Analytics"
+  "titulo-destinos": "Perfect for you!",
+  "destinos-nacionales": "National Destinations",
+  "destinos-internacionales": "International Destinations"
 }
