Traducciones vista de imagen y boton de inicio

--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -1,5 +1,58 @@
 {
   "titulo-destinos": "Perfect for you!",
   "destinos-nacionales": "National Destinations",
-  "destinos-internacionales": "International Destinations"
+  "destinos-internacionales": "International Destinations",
+  "selecciona-destino": "Choose your destination",
+  "texto-nacionales": "Mexico surprises you: beaches, cities, and unique moments.",
+  "texto-internacionales": "Select a continent to explore the best international destinations.",
+  "explora-continente": "Explore by Continent",
+  "seleccionar-destino": "Select a destination",
+  "no-hoteles": "No hotels available",
+  "hoteles-no-encontrados": "Currently, we couldn't find any hotels.",
+  "seleccionar-nueva-ciudad": "Try selecting another city or come back later.",
+  "ver-galeria": "View Gallery",
+  "descripcion": "Description",
+  "amenidades": "Amenities",
+  "ubicacion": "Location",
+  "compartir-hotel": "Share Hotel",
+  "nota": "Note",
+  "descripcion-nota": "Some amenities may have an additional cost.",
+  "cotizar": "Get a Quote",
+  "operadores-verificados": "We work with verified providers.",
+  "cotizacion": "No-obligation quote, secure confirmation.",
+  "cotiza-ahora": "Get a Quote Now",
+  "asistente": "Virtual Assistant",
+  "rango-fecha": "Date Range",
+  "noches": "nights",
+  "asesor": "Advisor",
+  "regimen": "Meal Plan",
+  "nombre": "Full name",
+  "telefono": "Phone",
+  "correo": "Email (Optional)",
+  "ofertas": "I want to receive exclusive offers and discounts",
+  "peticiones": "Special requests (Optional)",
+  "habitaciones": "Rooms",
+  "habitacion": "Room",
+  "Adultos": "Adults",
+  "+18": "From 18 years old",
+  "menores": "Children",
+  "-18": "Up to 17 years old",
+  "edad-menor": "Child's age",
+  "edad": "Age",
+  "selecciona-edad": "Select the age of all children.",
+  "por-habitacion": "per room",
+  "add-habitacion": "Add room",
+  "aplicar": "Apply",
+  "abrir-imagen": "Open image",
+  "selecciona-opcion": "Select an option",
+  "enviar-whats": "Send via WhatsApp",
+  "inicio": "Home",
+  "aviso-privacidad": "Privacy Notice",
+  "siguenos": "Follow us on:",
+  "beneficio-hoteles": "<strong>Over 100,000</strong> hotels worldwide", 
+  "beneficio-vuelos": "<strong>Domestic</strong> and <strong>International Flights</strong>",
+  "beneficio-pagos": "<strong>All</strong> payment methods",
+  "beneficio-meses": "Up to <strong>18 months</strong> interest-free",
+  "beneficio-atencion": "<strong>Customer Service</strong> from 10:00 AM to 9:00 PM",
+  "beneficio-anticipo": "Minimum down payment to book, <strong>secure</strong> confirmation"
 }
