--- a/public/i18n/es.json
+++ b/public/i18n/es.json
@@ -15,35 +15,44 @@
     "amenidades": "Amenidades",
     "ubicacion": "Ubicación",
     "compartir-hotel": "Compartir Hotel",
-    "nota":"Nota",
-    "descripcion-nota":"Algunas amenidades pueden tener un costo adicional.",
-    "cotizar":"Cotizar",
-    "operadores-verificados":"Operamos con proveedores verificados.",
-    "cotizacion":"Cotización sin compromiso, confirmación segura.",
-    "cotiza-ahora":"Cotizar Ahora.",
-    "asistente":"Asistente virtual",
-    "rango-fecha":"Rango de fechas",
-    "noches":"noches",
-    "asesor":"Asesor",
-    "regimen":"Régimen",
-    "nombre":"Nombre completo",
-    "telefono":"Teléfono",
-    "correo":"Email (Opcional)",
-    "ofertas":"Quiero recibir ofertas y descuentos exclusivos",
-    "peticiones":"Peticiones especiales (Opcional)",
-    "habitaciones":"Habitaciones",
-    "habitacion":"Habitación",
-    "Adultos":"Adultos",
-    "+18":"Desde 18 años",
-    "menores":"Menores",
-    "-18":"Hasta 17 años",
-    "edad-menor":"Edad del menor",
-    "edad":"Edad",
-    "selecciona-edad":"Selecciona la edad de todos los menores.",
-    "por-habitacion":"por habitación",
-    "add-habitacion":"Añadir habitación",
-    "aplicar":"Aplicar",
-    "abrir-imagen":"Abrir imagen",
-    "selecciona-opcion":"Selecciona una opción",
-    "enviar-whats":"Enviar a WhatsApp"
+    "nota": "Nota",
+    "descripcion-nota": "Algunas amenidades pueden tener un costo adicional.",
+    "cotizar": "Cotizar",
+    "operadores-verificados": "Operamos con proveedores verificados.",
+    "cotizacion": "Cotización sin compromiso, confirmación segura.",
+    "cotiza-ahora": "Cotizar Ahora.",
+    "asistente": "Asistente virtual",
+    "rango-fecha": "Rango de fechas",
+    "noches": "noches",
+    "asesor": "Asesor",
+    "regimen": "Régimen",
+    "nombre": "Nombre completo",
+    "telefono": "Teléfono",
+    "correo": "Email (Opcional)",
+    "ofertas": "Quiero recibir ofertas y descuentos exclusivos",
+    "peticiones": "Peticiones especiales (Opcional)",
+    "habitaciones": "Habitaciones",
+    "habitacion": "Habitación",
+    "Adultos": "Adultos",
+    "+18": "Desde 18 años",
+    "menores": "Menores",
+    "-18": "Hasta 17 años",
+    "edad-menor": "Edad del menor",
+    "edad": "Edad",
+    "selecciona-edad": "Selecciona la edad de todos los menores.",
+    "por-habitacion": "por habitación",
+    "add-habitacion": "Añadir habitación",
+    "aplicar": "Aplicar",
+    "abrir-imagen": "Abrir imagen",
+    "selecciona-opcion": "Selecciona una opción",
+    "enviar-whats": "Enviar a WhatsApp",
+    "inicio": "Inicio",
+    "aviso-privacidad": "Aviso de Privacidad",
+    "siguenos": "Síguenos en:",
+    "beneficio-hoteles": "<strong>+100 mil</strong> hoteles en todo el mundo",
+    "beneficio-vuelos": "<strong>Vuelos</strong> nacionales e internacionales",
+    "beneficio-pagos": "<strong>Todas</strong> las formas de pago",
+    "beneficio-meses": "Hasta <strong>18 meses</strong> sin intereses",
+    "beneficio-atencion": "<strong>Atención</strong> 10:00 a 21:00 hrs",
+    "beneficio-anticipo": "Anticipo <strong>mínimo</strong> para reservar, confirmación <strong>segura</strong>"
 }
