--- a/public/i18n/fr.json
+++ b/public/i18n/fr.json
@@ -56,5 +56,6 @@
   "beneficio-atencion": "<strong>Service client</strong> de 10h00 à 21h00",
   "beneficio-anticipo": "Acompte <strong>minimum</strong> pour réserver, confirmation <strong>sécurisée</strong>",
   "sin-descripcion": "La description de cet hôtel n’est pas encore disponible dans cette langue.",
-  "sin-amenidades": "Les équipements ne sont pas encore disponibles dans cette langue."
+  "sin-amenidades": "Les équipements ne sont pas encore disponibles dans cette langue.",
+  "cotizacion-mensaje": "Bonjour, je suis {{nombre}} et je suis intéressé par un devis pour l’hôtel {{hotel}} à {{ciudad}}.\nNuits : {{noches}}\nFormule : {{regimen.descripcion}}\nDate d’arrivée : {{entrada}}\nDate de départ : {{salida}}\nChambres : {{habitaciones}}\n{{detalleHabitaciones}}\nDemandes spéciales : {{especiales}}\nTéléphone : {{telefono}}\nEmail : {{correo}}\nConseiller : {{asesor}}"
 }
