--- a/public/i18n/fr.json
+++ b/public/i18n/fr.json
@@ -58,5 +58,6 @@
   "sin-descripcion": "La description de cet hôtel n’est pas encore disponible dans cette langue.",
   "sin-amenidades": "Les équipements ne sont pas encore disponibles dans cette langue.",
   "cotizacion-mensaje": "Bonjour, je suis {{nombre}} et je suis intéressé par un devis pour l’hôtel {{hotel}} à {{ciudad}}.\nNuits : {{noches}}\nFormule : {{regimen.descripcion}}\nDate d’arrivée : {{entrada}}\nDate de départ : {{salida}}\nChambres : {{habitaciones}}\n{{detalleHabitaciones}}\nDemandes spéciales : {{especiales}}\nTéléphone : {{telefono}}\nEmail : {{correo}}\nConseiller : {{asesor}}",
-  "empleado_otro": "Autre"
+  "empleado_otro": "Autre",
+  "ver-mas": "Voir plus"
 }
