Ver galeria sin salto

--- a/public/i18n/de.json
+++ b/public/i18n/de.json
@@ -10,7 +10,8 @@
   "no-hoteles": "Keine Hotels verfügbar",
   "hoteles-no-encontrados": "Derzeit konnten wir keine Hotels finden.",
   "seleccionar-nueva-ciudad": "Versuchen Sie, eine andere Stadt auszuwählen oder kommen Sie später wieder.",
-  "ver-galeria": "Galerie <br> ansehen",
+  "ver-galeria-salto": "Galerie <br> ansehen",
+  "ver-galeria": "Galerie ansehen",
   "descripcion": "Beschreibung",
   "amenidades": "Ausstattung",
   "ubicacion": "Lage",
