--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -10,7 +10,8 @@
   "no-hoteles": "No hotels available",
   "hoteles-no-encontrados": "Currently, we couldn't find any hotels.",
   "seleccionar-nueva-ciudad": "Try selecting another city or come back later.",
-  "ver-galeria": "View <br> Gallery",
+  "ver-galeria-salto": "View <br> Gallery",
+  "ver-galeria": "View Gallery",
   "descripcion": "Description",
   "amenidades": "Amenities",
   "ubicacion": "Location",
