--- a/public/i18n/es.json
+++ b/public/i18n/es.json
@@ -10,7 +10,8 @@
     "no-hoteles": "No hay hoteles disponibles",
     "hoteles-no-encontrados": "Actualmente no encontramos hoteles.",
     "seleccionar-nueva-ciudad": "Intenta seleccionar otra ciudad o vuelve más tarde.",
-    "ver-galeria": "Ver <br> Galería",
+    "ver-galeria-salto": "Ver <br> Galería",
+    "ver-galeria": "Ver Galería",
     "descripcion": "Descripción",
     "amenidades": "Amenidades",
     "ubicacion": "Ubicación",
