--- a/public/i18n/fr.json
+++ b/public/i18n/fr.json
@@ -10,7 +10,8 @@
   "no-hoteles": "Aucun hôtel disponible",
   "hoteles-no-encontrados": "Actuellement, nous n’avons trouvé aucun hôtel.",
   "seleccionar-nueva-ciudad": "Essayez de sélectionner une autre ville ou revenez plus tard.",
-  "ver-galeria": "Voir <br> Galerie",
+  "ver-galeria-salto": "Voir <br> Galerie",
+  "ver-galeria": "Voir Galerie",
   "descripcion": "Description",
   "amenidades": "Équipements",
   "ubicacion": "Emplacement",
