--- a/public/i18n/pt.json
+++ b/public/i18n/pt.json
@@ -10,7 +10,8 @@
   "no-hoteles": "Não há hotéis disponíveis",
   "hoteles-no-encontrados": "Atualmente, não encontramos hotéis.",
   "seleccionar-nueva-ciudad": "Tente selecionar outra cidade ou volte mais tarde.",
-  "ver-galeria": "Ver <br> Galeria",
+  "ver-galeria-salto": "Ver <br> Galeria",
+  "ver-galeria": "Ver Galeria",
   "descripcion": "Descrição",
   "amenidades": "Comodidades",
   "ubicacion": "Localização",
