--- a/public/i18n/pt.json
+++ b/public/i18n/pt.json
@@ -60,5 +60,6 @@
   "sin-amenidades": "As comodidades ainda não estão disponíveis neste idioma.",
   "cotizacion-mensaje": "Olá, eu sou {{nombre}} e estou interessado em uma cotação para o hotel {{hotel}} em {{ciudad}}.\nNoites: {{noches}}\nRegime: {{regimen.descripcion}}\nData de entrada: {{entrada}}\nData de saída: {{salida}}\nQuartos: {{habitaciones}}\n{{detalleHabitaciones}}\nPedidos especiais: {{especiales}}\nTelefone: {{telefono}}\nEmail: {{correo}}\nConsultor: {{asesor}}",
   "empleado_otro": "Outro",
-  "ver-mas": "Ver mais"
+  "ver-mas": "Ver mais",
+  "todas-imagenes": "Todas as imagens"
 }
