--- a/public/i18n/de.json
+++ b/public/i18n/de.json
@@ -60,5 +60,6 @@
   "sin-amenidades": "Ausstattungen sind in dieser Sprache noch nicht verfügbar.",
   "cotizacion-mensaje": "Hallo, ich bin {{nombre}} und interessiere mich für ein Angebot für das Hotel {{hotel}} in {{ciudad}}.\nNächte: {{noches}}\nVerpflegungsart: {{regimen.descripcion}}\nAnreisedatum: {{entrada}}\nAbreisedatum: {{salida}}\nZimmer: {{habitaciones}}\n{{detalleHabitaciones}}\nBesondere Wünsche: {{especiales}}\nTelefon: {{telefono}}\nE-Mail: {{correo}}\nBerater: {{asesor}}",
   "empleado_otro": "Andere",
-  "ver-mas": "Mehr sehen"
+  "ver-mas": "Mehr sehen",
+  "todas-imagenes": "Alle Bilder"
 }
