--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -60,5 +60,6 @@
   "sin-amenidades": "Amenities are not yet available in this language.",
   "cotizacion-mensaje": "Hello, I am {{nombre}} and I am interested in a quote for the hotel {{hotel}} in {{ciudad}}.\nNights: {{noches}}\nMeal Plan: {{regimen.descripcion}}\nCheck-in Date: {{entrada}}\nCheck-out Date: {{salida}}\nRooms: {{habitaciones}}\n{{detalleHabitaciones}}\nSpecial Requests: {{especiales}}\nPhone: {{telefono}}\nEmail: {{correo}}\nAdvisor: {{asesor}}",
    "empleado_otro": "Other",
-  "ver-mas": "See more"
+  "ver-mas": "See more",
+  "todas-imagenes": "All images"
 }
