--- a/public/i18n/es.json
+++ b/public/i18n/es.json
@@ -58,8 +58,15 @@
     "beneficio-anticipo": "Anticipo <strong>mínimo</strong> para reservar, confirmación <strong>segura</strong>",
     "sin-descripcion": "La descripción de este hotel aún no está disponible en este idioma.",
     "sin-amenidades": "Las amenidades aún no están disponibles en este idioma.",
-    "cotizacion-mensaje": "Hola, soy {{nombre}} y me interesa una cotización en el hotel {{hotel}} en {{ciudad}}.\nNoches: {{noches}}\nRégimen: {{regimen.es}}\nFecha de entrada: {{entrada}}\nFecha de salida: {{salida}}\nHabitaciones: {{habitaciones}}\n{{detalleHabitaciones}}\nPeticiones especiales: {{especiales}}\nTeléfono: {{telefono}}\nCorreo: {{correo}}\nAsesor: {{asesor}}",
+    "cotizacion-mensaje": "Hola, soy {{nombre}} y me interesa una cotización en el hotel {{hotel}} en {{ciudad}}.\nNoches: {{noches}}\nRégimen: {{regimen.es}}\nFecha de entrada: {{entrada}}\nFecha de salida: {{salida}}\nHabitaciones: {{habitaciones}}\n{{detalleHabitaciones.es}}\nPeticiones especiales: {{especiales}}\nTeléfono: {{telefono}}\nCorreo: {{correo}}\nAsesor: {{asesor}}",
     "empleado_otro": "Otro",
     "ver-mas": "Ver más",
-    "todas-imagenes": "Todas las imágenes"
+    "todas-imagenes": "Todas las imágenes",
+    "adulto": "adulto",
+    "adultos": "adultos",
+    "nino": "niño",
+    "ninos": "niños",
+    "edades": "edades",
+    "ano": "año",
+    "anos": "años"
 }
