Meses sin intereses

--- a/public/i18n/de.json
+++ b/public/i18n/de.json
@@ -53,7 +53,7 @@
   "beneficio-hoteles": "<strong>Über 100.000</strong> Hotels weltweit",
   "beneficio-vuelos": "<strong>Inlands-</strong> und <strong>Auslandsflüge</strong>",
   "beneficio-pagos": "<strong>Alle</strong> Zahlungsmethoden",  
-  "beneficio-meses": "Bis zu <strong>18 Monate</strong> zinsfrei",
+  "beneficio-meses": " <strong>Zinsfreie</strong> Ratenzahlung",
   "beneficio-atencion": "<strong>Kundenservice</strong> von 10:00 bis 21:00 Uhr",
   "beneficio-anticipo": "Mindestanzahlung zur Buchung, <strong>sichere</strong> Bestätigung",
   "sin-descripcion": "Die Beschreibung dieses Hotels ist in dieser Sprache noch nicht verfügbar.",
