--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -53,7 +53,7 @@
   "beneficio-hoteles": "<strong>Over 100,000</strong> hotels worldwide", 
   "beneficio-vuelos": "<strong>Domestic</strong> and <strong>International Flights</strong>",
   "beneficio-pagos": "<strong>All</strong> payment methods",
-  "beneficio-meses": "Up to <strong>18 months</strong> interest-free",
+  "beneficio-meses": "<strong>Interest-free</strong> installments",
   "beneficio-atencion": "<strong>Customer Service</strong> from 10:00 AM to 9:00 PM",
   "beneficio-anticipo": "Minimum down payment to book, <strong>secure</strong> confirmation",
   "sin-descripcion": "The description of this hotel is not yet available in this language.",
