--- a/public/i18n/fr.json
+++ b/public/i18n/fr.json
@@ -53,7 +53,7 @@
   "beneficio-hoteles": "<strong>Plus de 100 000</strong> hôtels dans le monde entier",
   "beneficio-vuelos": "<strong>Vols</strong> nationaux et internationaux",
   "beneficio-pagos": "<strong>Toutes</strong> les méthodes de paiement",
-  "beneficio-meses": "Jusqu’à <strong>18 mois</strong> sans intérêts",
+  "beneficio-meses": " Paiement en <strong>plusieurs fois sans intérêts</strong>",
   "beneficio-atencion": "<strong>Service client</strong> de 10h00 à 21h00",
   "beneficio-anticipo": "Acompte <strong>minimum</strong> pour réserver, confirmation <strong>sécurisée</strong>",
   "sin-descripcion": "La description de cet hôtel n’est pas encore disponible dans cette langue.",
