--- a/public/i18n/es.json
+++ b/public/i18n/es.json
@@ -53,7 +53,7 @@
     "beneficio-hoteles": "<strong>+100 mil</strong> hoteles en todo el mundo",
     "beneficio-vuelos": "<strong>Vuelos</strong> nacionales e internacionales",
     "beneficio-pagos": "<strong>Todas</strong> las formas de pago",
-    "beneficio-meses": "Hasta <strong>18 meses</strong> sin intereses",
+    "beneficio-meses": "Meses <strong>sin intereses</strong>",
     "beneficio-atencion": "<strong>Atención</strong> 10:00 a 21:00 hrs",
     "beneficio-anticipo": "Anticipo <strong>mínimo</strong> para reservar, confirmación <strong>segura</strong>",
     "sin-descripcion": "La descripción de este hotel aún no está disponible en este idioma.",
