--- a/public/i18n/pt.json
+++ b/public/i18n/pt.json
@@ -53,7 +53,7 @@
   "beneficio-hoteles": "<strong>Mais de 100.000</strong> hotéis em todo o mundo",
   "beneficio-vuelos": "<strong>Voos</strong> nacionais e internacionais",
   "beneficio-pagos": "<strong>Todas</strong> as formas de pagamento",
-  "beneficio-meses": "Até <strong>18 meses</strong> sem juros",
+  "beneficio-meses": "Parcelas <strong>sem juros</strong>",
   "beneficio-atencion": "<strong>Atendimento ao cliente</strong> das 10:00 às 21:00",
   "beneficio-anticipo": "Entrada <strong>mínima</strong> para reservar, confirmação <strong>segura</strong>",
   "sin-descripcion": "A descrição deste hotel ainda não está disponível neste idioma.",
