Visualizacion de paneles en internacionales

--- a/public/i18n/de.json
+++ b/public/i18n/de.json
@@ -61,6 +61,7 @@
   "cotizacion-mensaje": "Hallo, ich bin {{nombre}} und interessiere mich für ein Angebot für das Hotel {{hotel}} in {{ciudad}}.\nNächte: {{noches}}\nVerpflegungsart: {{regimen.descripcion}}\nAnreisedatum: {{entrada}}\nAbreisedatum: {{salida}}\nZimmer: {{habitaciones}}\n{{detalleHabitaciones.traduccion}}\nBesondere Wünsche: {{especiales}}\nTelefon: {{telefono}}\nE-Mail: {{correo}}\nBerater: {{asesor}}",
   "empleado_otro": "Andere",
   "ver-mas": "Mehr sehen",
+  "ver-menos": "Weniger sehen",
   "todas-imagenes": "Alle Bilder",
   "adulto": "Erwachsener",
   "adultos": "Erwachsene",
