--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -61,6 +61,7 @@
   "cotizacion-mensaje": "Hello, I am {{nombre}} and I am interested in a quote for the hotel {{hotel}} in {{ciudad}}.\nNights: {{noches}}\nMeal Plan: {{regimen.descripcion}}\nCheck-in Date: {{entrada}}\nCheck-out Date: {{salida}}\nRooms: {{habitaciones}}\n{{detalleHabitaciones.traduccion}}\nSpecial Requests: {{especiales}}\nPhone: {{telefono}}\nEmail: {{correo}}\nAdvisor: {{asesor}}",
    "empleado_otro": "Other",
   "ver-mas": "See more",
+  "ver-menos": "See less",
   "todas-imagenes": "All images",
   "adulto": "adult",
   "adultos": "adults",
