--- a/public/i18n/pt.json
+++ b/public/i18n/pt.json
@@ -61,6 +61,7 @@
   "cotizacion-mensaje": "Olá, eu sou {{nombre}} e estou interessado em uma cotação para o hotel {{hotel}} em {{ciudad}}.\nNoites: {{noches}}\nRegime: {{regimen.descripcion}}\nData de entrada: {{entrada}}\nData de saída: {{salida}}\nQuartos: {{habitaciones}}\n{{detalleHabitaciones.traduccion}}\nPedidos especiais: {{especiales}}\nTelefone: {{telefono}}\nEmail: {{correo}}\nConsultor: {{asesor}}",
   "empleado_otro": "Outro",
   "ver-mas": "Ver mais",
+  "ver-menos": "Ver menos",
   "todas-imagenes": "Todas as imagens",
   "adulto": "adulto",
   "adultos": "adultos",
