diseño de menu pantalla inicio

--- a/public/i18n/de.json
+++ b/public/i18n/de.json
@@ -69,5 +69,8 @@
   "ninos": "Kinder",
   "edades": "Alter",
   "ano": "Jahr",
-  "anos": "Jahre"
+  "anos": "Jahre",
+  "selecciona-proxima-aventura": "Wähle dein nächstes Abenteuer",
+  "descubre-la-magia-de-mexico": "Entdecke den Zauber Mexikos",
+  "explora-fronteras-lejanas": "Erkunde ferne Horizonte"
 }
