--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -69,5 +69,8 @@
   "ninos": "children",
   "edades": "ages",
   "ano": "year",
-  "anos": "years"
+  "anos": "years",
+  "selecciona-proxima-aventura": "Choose your next adventure",
+  "descubre-la-magia-de-mexico": "Discover the magic of Mexico",
+  "explora-fronteras-lejanas": "Explore distant horizons"
 }
