--- a/public/i18n/es.json
+++ b/public/i18n/es.json
@@ -69,5 +69,8 @@
     "ninos": "niños",
     "edades": "edades",
     "ano": "año",
-    "anos": "años"
+    "anos": "años",
+    "selecciona-proxima-aventura": "Selecciona tu próxima aventura",
+    "descubre-la-magia-de-mexico": "Descubre la magia de México",
+  "explora-fronteras-lejanas": "Explora fronteras lejanas"
 }
