--- a/public/i18n/fr.json
+++ b/public/i18n/fr.json
@@ -69,5 +69,8 @@
   "ninos": "enfants",
   "edades": "âges",
   "ano": "an",
-  "anos": "ans"
+  "anos": "ans",
+  "selecciona-proxima-aventura": "Choisissez votre prochaine aventure",
+  "descubre-la-magia-de-mexico": "Découvrez la magie du Mexique",
+  "explora-fronteras-lejanas": "Explorez des horizons lointains"
 }
