--- a/public/i18n/pt.json
+++ b/public/i18n/pt.json
@@ -69,5 +69,8 @@
   "ninos": "crianças",
   "edades": "idades",
   "ano": "ano",
-  "anos": "anos"
+  "anos": "anos",
+  "selecciona-proxima-aventura": "Escolha sua próxima aventura",
+  "descubre-la-magia-de-mexico": "Descubra a magia do México",
+  "explora-fronteras-lejanas": "Explore horizontes distantes"
 }
