--- a/public/i18n/de.json
+++ b/public/i18n/de.json
@@ -58,7 +58,7 @@
   "beneficio-anticipo": "Mindestanzahlung zur Buchung, <strong>sichere</strong> Bestätigung",
   "sin-descripcion": "Die Beschreibung dieses Hotels ist in dieser Sprache noch nicht verfügbar.",
   "sin-amenidades": "Ausstattungen sind in dieser Sprache noch nicht verfügbar.",
-  "cotizacion-mensaje": "Hallo, ich bin {{nombre}} und interessiere mich für ein Angebot für das Hotel {{hotel}} in {{ciudad}}.\nNächte: {{noches}}\nVerpflegungsart: {{regimen.descripcion}}\nAnreisedatum: {{entrada}}\nAbreisedatum: {{salida}}\nZimmer: {{habitaciones}}\n{{detalleHabitaciones.traduccion}}\nBesondere Wünsche: {{especiales}}\nTelefon: {{telefono}}\nE-Mail: {{correo}}\nBerater: {{asesor}}",
+  "cotizacion-mensaje": "Hallo, ich bin {{nombre}} und interessiere mich für ein Angebot für das Hotel {{hotel}} in {{ciudad}}.\nNächte: {{noches}}\nVerpflegungsart: {{regimen.descripcion}}\nAnreisedatum: {{entrada}}\nAbreisedatum: {{salida}}\nZimmer: {{habitaciones}}\n{{detalleHabitaciones.traduccion}}\nBesondere Wünsche: {{especiales}}\nTelefon: {{telefono}}\nE-Mail: {{correo}}\nBerater: {{asesor}} \n Angebotsnummer: {{id}}",
   "empleado_otro": "Andere",
   "ver-mas": "Mehr sehen",
   "ver-menos": "Weniger sehen",
